--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hono": "^4.7.1"
   },
   "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "^0.6.16",
     "@cloudflare/workers-types": "^4.20250109.0",
     "wrangler": "^3.101.0"
   }
