--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
     "@cloudflare/workers-types": "^4.20250109.0",
+    "prisma": "^6.4.0",
     "vitest": "^2.1.9",
     "wrangler": "^3.101.0"
   }
