--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,13 +9,13 @@
       "database_name": "test",
       "database_id": "c668c7fd-8ca9-4030-90a0-9e06b8af7b1b"
     }
-  ]
+  ],
   // "compatibility_flags": [
   //   "nodejs_compat"
   // ],
-  // "vars": {
-  //   "MY_VAR": "my-variable"
-  // },
+  "vars": {
+    "SECRET_API_KEY": "xxxxxxxxxxxxxxxxx"
+  }
   // "kv_namespaces": [
   //   {
   //     "binding": "MY_KV_NAMESPACE",
