npm install -D @types/node

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
     "@cloudflare/workers-types": "^4.20250109.0",
+    "@types/node": "^22.13.4",
     "prisma": "^6.4.0",
     "vitest": "^2.1.9",
     "wrangler": "^3.101.0"
