use import alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
       "@cloudflare/vitest-pool-workers"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
