--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@prisma/adapter-d1": "^6.4.0",
     "@prisma/client": "^6.4.0",
-    "hono": "^4.7.1"
+    "hono": "^4.7.1",
+    "jose": "^5.10.0"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
