--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@prisma/adapter-d1": "^6.4.0",
     "@prisma/client": "^6.4.0",
+    "dayjs": "^1.11.13",
     "hono": "^4.7.1",
     "jose": "^6.0.10"
   },
