--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.3",
     "@prisma/adapter-d1": "^6.4.0",
     "@prisma/client": "^6.4.0",
     "dayjs": "^1.11.13",
